[package]
name = "increment_contract"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "22.0.1"
ed25519-dalek = "2.1.1"
k256 = "0.13.1"





[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }



[lib]
crate-type = ["cdylib"]
doctest = false

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true


[net]
git-fetch-with-cli = true





